--- a/public/error.html
+++ b/public/error.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="My map application"
+      content="Georgia Fall Color Destinations"
     />
-    <title>My Map App</title>
+    <title>Georgia Fall Color Destinations</title>
   </head>
   <body>
     <style>
